<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bank.bgfi.bgfibank.Fragments.HistoryFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/row1"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/depot"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text=".................."
            android:gravity="center"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/fake_deposit"
            android:id="@+id/deposit"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/balance"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text=".................."
            android:gravity="center"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/fake_deposit"
            android:id="@+id/balance"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
       ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linear_main"
            android:weightSum="3">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15dp"
                android:id="@+id/bal_det"
                android:text="@string/balance"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="center"
                android:textSize="25dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/balance_date"
                    android:textSize="10dp"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/fake_deposit"
                    android:id="@+id/balance_detail"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/linear_expand"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expand_date"
                android:layout_marginLeft="15dp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TableRow
                    android:id="@+id/tableRow1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                    <TextView
                        android:text="@string/sl"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/sl_value"
                        android:layout_weight="1"
                        android:text="__"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:text="@string/swap"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/swap_value"
                        android:text="0.00"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                    <TextView
                        android:text="@string/tp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tp_value"
                        android:layout_weight="1"
                        android:text="__"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:text="@string/impot"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/impot_value"
                        android:text="0.00"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                </TableRow>



                <TableRow
                    android:id="@+id/tableRow3"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">

                    <TextView
                        android:text="@string/id_bal"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/id_value"
                        android:layout_weight="1"
                        android:text="__"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                    <TextView
                        android:text="@string/commission"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/commission_value"
                        android:text="0.00"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                </TableRow>
            </TableLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                ></View>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


</FrameLayout>
